--- a/index.html
+++ b/index.html
@@ -2,10 +2,22 @@
 <html>
 <head>
 	<title>Hello, World!</title>
+	<link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-	<h1>Hello, World!</h1>
+	<div class="container">
+		<h1>Hello, World!</h1>
+		
+		<p>Lorem ipsum dolor sit amet</p>
+		
+		<ul>
+			<li>This</li>
+			<li>That</li>
+			<li>The Other Thing</li>
+		</ul>
+	</div>
 	
-	<p>Lorem ipsum dolor sit amet</p>
+	<script src="js/script.js"></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 </body>
 </html>
