--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 	<h1>Hello, World!</h1>
 	
 	<p>Lorem ipsum dolor sit amet</p>
+	
+	<blockquote>This content is critical to have, <em>right now</em>.</blockquote>
 </body>
 </html>
