Critical feature: spinning copyright symbol

--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
 			<li>That</li>
 			<li>The Other Thing</li>
 		</ul>
+		
+		<div class="copyright"><span>&copy;</span></div>
+		
 	</div>
 	
-	<script src="js/script.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+	<script src="js/script.js"></script>
 </body>
 </html>
