Added smiley to corner of page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
 	<div class="container">
 		<h1>Hello, World!</h1>
+		<div class="smiley">&#128513</div>
 		
 		<p>Lorem ipsum dolor sit amet</p>
 	
